--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "ci-expo-example",
-    "slug": "proj",
+    "slug": "ci-expo-example",
     "privacy": "public",
     "sdkVersion": "32.0.0",
     "platforms": [
