--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "eject": "expo eject",
-    "test": "node ./node_modules/jest/bin/jest.js --watchAll"
+    "test": "jest"
   },
   "jest": {
     "preset": "jest-expo"
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
+    "jest": "^24.7.0",
     "jest-expo": "^32.0.0"
   },
   "private": true
